.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Version__c.object
<CustomObject>
    <description>Supports versioning of Service Types, allow structure of Service Type (questions, activities, outcomes) to remain in place for open Service Requests, when new versions of a Service Type are rolled out.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Alert_Validations__c</fullName>
        <label>Alert Validations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Allow_Citizen_Web_Intake__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the Service Type Version publicly available through the API for public API calls</description>
        <label>Allow Citizen Web Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact_Status__c</fullName>
        <description>Defines if the Citizen information is required for an SR and if required what Contact info is required.</description>
        <formula>IF(TEXT(Incap311__Override_Contact_Status__c) != &apos;&apos;,
    TEXT(Incap311__Override_Contact_Status__c),
    TEXT(Incap311__Service_Type__r.Incap311__Contact_Status__c))</formula>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Days_Of_Week__c</fullName>
        <label>Days Of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incap311__Days_Of_The_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Default_Layers__c</fullName>
        <description>A comma separated value of layer Ids</description>
        <label>Default Layers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Method__c</fullName>
        <description>Defines the default method when the SR Type is created.  The default can be overridden via rules or APIs</description>
        <label>Default Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>311-App</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Internal Transfer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Default_Priority__c</fullName>
        <description>Defines the default Priority when the SR Type is created. The default can be overridden via rules or APIs</description>
        <label>Default Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                    <isActive>false</isActive>
                    <label>Emergency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Default_Status__c</fullName>
        <description>Defines the default Status when the SR Type is created. The default can be overridden via rules or APIs</description>
        <label>Default Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribute_On__c</fullName>
        <defaultValue>&apos;All&apos;</defaultValue>
        <description>Defines when the Distribution functionality will appear on the SR intake form</description>
        <label>Distribute On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Distribution_Matching_del__c</fullName>
        <description>Defines any layer data that the distribution should be matched on for the SR.  Must be JSON.</description>
        <label>Distribution Matching</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Detection_Method__c</fullName>
        <description>Defines the duplication method used</description>
        <label>Duplicate Detection Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Geo Layers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Layers_JSON__c</fullName>
        <description>Field for storing duplicate layer login in JSON format</description>
        <label>Duplicate Layers JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Match_Street__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Match Street</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Oldest_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duplicate detection from Oldest SR to Newest SR</description>
        <inlineHelpText>Duplicate detection from Oldest SR to Newest SR</inlineHelpText>
        <label>Duplicate Oldest Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Radius_feet__c</fullName>
        <description>Define how many feet from the address provided that a duplicate should be considered</description>
        <label>Duplicate Radius (feet)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Statuses__c</fullName>
        <description>Define the Status of SR that a duplicate should be considered</description>
        <label>Duplicate Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                    <isActive>false</isActive>
                    <label>Escalated</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                    <isActive>false</isActive>
                    <label>Working</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Threshold_Period_days__c</fullName>
        <description>Define how many days from the create date that a duplicate should be considered</description>
        <label>Duplicate Threshold Period (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Duplicate_Threshold_Period_hours__c</fullName>
        <description>Define how many hours from the create date that a duplicate should be considered</description>
        <label>Duplicate Threshold Period (hours)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Body_Close__c</fullName>
        <description>Deprecated in favor of Rich Email Body (Close)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Body (Close)</inlineHelpText>
        <label>DEPRECATED - Email Body (Close)</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Body_Create__c</fullName>
        <description>Deprecated in favor of Rich Email Body (Create)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Body (Create)</inlineHelpText>
        <label>DEPRECATED - Email Body (Create)</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Closing_Close__c</fullName>
        <description>Deprecated in favor of Rich Email Closing (Close)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Closing (Close)</inlineHelpText>
        <label>DEPRECATED - Email Closing (Close)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Closing_Create__c</fullName>
        <description>Deprecated in favor of Rich Email Closing (Create)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Closing (Create)</inlineHelpText>
        <label>DEPRECATED - Email Closing (Create)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Intro_Close__c</fullName>
        <description>Deprecated in favor of Rich Email Intro (Close)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Intro (Close)</inlineHelpText>
        <label>DEPRECATED - Email Intro (Close)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Intro_Create__c</fullName>
        <description>Deprecated in favor of Rich Email Intro (Create)</description>
        <inlineHelpText>Deprecated in favor of Rich Email Intro (Create)</inlineHelpText>
        <label>DEPRECATED - Email Intro (Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Template_Id_for_Close__c</fullName>
        <label>Email Template Id for Close</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Template_Id_for_Create__c</fullName>
        <label>Email Template Id for Create</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Email_Template_Id_for_Update__c</fullName>
        <label>Email Template Id for Update</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables business hours. This checks business hours configuration for the Service Type&apos;s code.</description>
        <label>Enable Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Distribution_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the Update field for the Distribution functionality is available</description>
        <label>Enable Distribution Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Distribution_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the Distribution functionality is used for the SR</description>
        <label>Enable Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Operational_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To consider operation period for SLA calculations</description>
        <inlineHelpText>To consider operation period for SLA calculations</inlineHelpText>
        <label>Enable Operational SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Enable_Sub_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sub Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__External_Name__c</fullName>
        <description>SR Name to display for external sources</description>
        <formula>IF(
NOT(ISBLANK(Incap311__Service_Type__r.Incap311__External_Name__c)), 
Incap311__Service_Type__r.Incap311__External_Name__c,
Incap311__Service_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Generate_All_Questions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether all questions should be included when the service type is submitted; even if they aren&apos;t enabled due to dependencies.</description>
        <label>Generate All Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Geo_Validations__c</fullName>
        <label>Geo Validations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Group__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>SR metadata to group SRs.</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Has_Metadata__c</fullName>
        <formula>Incap311__Question_Count__c != 0</formula>
        <label>Has Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Hide_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Hide_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Include_System_Defaults_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the distribution system defaults are available for the SR</description>
        <label>Include System Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Activatable__c</fullName>
        <description>Determines if the field &quot;Activatable&quot;. Many versions</description>
        <formula>(
  ( 
   ( (NOT(ISNULL(Incap311__Start__c)) &amp;&amp; (TODAY() &gt;= Incap311__Start__c) ) || ISNULL(Incap311__Start__c)) 
     &amp;&amp; 
   ( ( NOT(ISNULL(Incap311__Stop__c)) &amp;&amp; (TODAY() &lt; Incap311__Stop__c) ) || ISNULL(Incap311__Stop__c) )
  )
)
&amp;&amp;
NOT(Incap311__Is_Draft__c)</formula>
        <label>Is Activatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Contact_Or_Account_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the Contact or the Account is required to save the SR</description>
        <label>Is Contact Or Account Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Current_Version__c</fullName>
        <description>Identifies if the version is the current active version</description>
        <formula>Incap311__Service_Type__r.Incap311__Active_Service_Type_Version__c = Id</formula>
        <label>Is Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if the version is in draft</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Old_Version__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Active_Service_Type_Version__r.Incap311__Version_Number__c &gt;  Incap311__Version_Number__c</formula>
        <label>Is Old Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Keywords__c</fullName>
        <description>manage words that can be used to search for the SR</description>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Layer_Information__c</fullName>
        <label>Layer Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Map_Marker_Icon__c</fullName>
        <label>Map Marker Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incap311__Midnight_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. SR is created at 1/1/xxxx 3:00 PM and SLA is configured as 1 business day. Then if this flag is checked, SR Expected datetime will be set to 1/2/xxxx 11:59 PM instead of 1/2/xxxx 3:00 PM.</inlineHelpText>
        <label>Midnight SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Override_Contact_Status__c</fullName>
        <description>Can override the SRT Contact Status if the SRT Contact Status is set to FALSE.  If the SRT Contact Status is set to TRUE, you can not override it to FALSE.</description>
        <label>Override Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Visible</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, EM)</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, EM or PH)</fullName>
                </value>
                <value>
                    <fullName>Required (LN, FN, PH)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Private_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all the attachments on service requests are not visible on web or mobile and are hidden from integrators using the API.</description>
        <inlineHelpText>If checked, all the attachments on service requests are not visible on web or mobile and are hidden from integrators using the API.</inlineHelpText>
        <label>Private Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Count__c</fullName>
        <label>Question Count</label>
        <summaryForeignKey>Incap311__Service_Type_Version_Question__c.Incap311__Service_Type_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Incap311__Recommended_Types__c</fullName>
        <label>Recommended Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>realtime</fullName>
                    <default>true</default>
                    <label>realtime</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Body_Close__c</fullName>
        <description>Used to populate email content for the SR.  Define a template Body for the Close email</description>
        <label>Rich Email Body (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Body_Create__c</fullName>
        <description>Used to populate email content for the SR.  Define a template Body for the create email</description>
        <label>Rich Email Body (Create)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Closing_Close__c</fullName>
        <description>Used to populate email content for the SR.  Define a template closing for the close email</description>
        <label>Rich Email Closing (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Closing_Create__c</fullName>
        <description>Used to populate email content for the SR.  Define a template closing for the create email</description>
        <label>Rich Email Closing (Create)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Intro_Close__c</fullName>
        <description>Used to populate email content for the SR.  Define a template intro for the close email</description>
        <label>Rich Email Intro (Close)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Rich_Email_Intro_Create__c</fullName>
        <description>Used to populate email content for the SR.  Define a template intro for the create email</description>
        <label>Rich Email Intro (Create)</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA_Detail__c</fullName>
        <formula>IF(
    Incap311__SLA__c == 0,
    &quot;No SLA Defined&quot;,
    IF(
       Incap311__SLA__c  == 1,
       TEXT(Incap311__SLA__c) + &quot; &quot; + LEFT(TEXT(Incap311__SLA_Type__c), LEN(TEXT(Incap311__SLA_Type__c)) - 1),
       TEXT(Incap311__SLA__c) + &quot; &quot; + TEXT(Incap311__SLA_Type__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA_Type__c</fullName>
        <description>Define the unit type to calculate the SLA . Works with the SLA field</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__SLA__c</fullName>
        <description>Defines the number of units for the SLA calculation.  This number works with teh SLA Type to determine the SLA dates</description>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Alert_Message__c</fullName>
        <label>SR Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_Email_On_SR_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Close Case Event will be created when the SR is created.  Track SR Closure Email must be set to True for any Case Event to be created</description>
        <label>Send Email On SR Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_Email_On_SR_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Create Case Event will be created when the SR is created.  Track SR Create Email must be set to True for any Case Event to be created</description>
        <label>Send Email On SR Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Icon__c</fullName>
        <label>Service Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Location_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if the Location is required to save the SR</description>
        <label>Service Location Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <description>Name of the SR that will be displayed on the UI</description>
        <label>Service Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Notice__c</fullName>
        <label>Service Notice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <description>Displays the Service Type Code the version is associated to</description>
        <formula>Incap311__Service_Type__r.Incap311__Service_Type_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Name__c</fullName>
        <description>Displays the Service Type ID that the version is associated to</description>
        <formula>Incap311__Service_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <description>The Service Type ID that the version is associated to</description>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Service Type Versions</relationshipLabel>
        <relationshipName>Service_Type_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Start_Date__c</fullName>
        <description>Defines a date when SLA dates can start calculating.  if the SR is created before the start date .and after the stop date, the SLA will not start until the identified Start Date.  NULL means there is no Start Date and the SLA will calculate immediately when the SR is created.  Used for seasonal SR&apos;s (tree removal)</description>
        <label>SLA: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Start__c</fullName>
        <description>The Date the SR will appear as available to create after the Start Date.  Before the Start Date the SR will not be available to create</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Stop_Date__c</fullName>
        <description>Defines a date when SLA dates will stop calculating.  If the SR is created after the stop date .and before the stop date, the SLA will not start until the identified Start Date.  NULL means there is no stop date and the SLA will calculate immediately when the SR is created.  Used for seasonal SR&apos;s (tree removal)
If the SR is created between the start and stop date, the SLA is calculated will not stop or pause on based on the stop date</description>
        <label>SLA: Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Stop__c</fullName>
        <description>Define the Date the SR will not be available to select to create an SR
The Date the SR will no longer appear as available to create.  After the Stop Date the SR will not be available to create</description>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Track_SR_Closure_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Case Events will be created when the Case is closed</description>
        <label>Track SR Closure Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Track_SR_Creation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if Case Events will be created when the Case is created</description>
        <label>Track SR Creation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Validations__c</fullName>
        <label>Validations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Version_Code__c</fullName>
        <description>Unique code manually given to the SR Version</description>
        <label>Version Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Version_Name__c</fullName>
        <description>Unique version name manually given to the SR Verison</description>
        <label>Version Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Version_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number auto assigned when a new version is created.  Version numbers are sequential</description>
        <label>Version Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Visible_Layers__c</fullName>
        <description>Define the layers that will be visible in the Geo Layers section of the SR UI during intake for the SR.  JSON format used to define the layers</description>
        <label>Visible Layers</label>
        <type>TextArea</type>
    </fields>
    <label>Service Type Version</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Service_Type__c</columns>
        <columns>Incap311__Version_Code__c</columns>
        <columns>Incap311__Recommended_Types__c</columns>
        <columns>Incap311__Default_Priority__c</columns>
        <columns>Incap311__External_Name__c</columns>
        <columns>Incap311__Service_Name__c</columns>
        <columns>Incap311__Version_Number__c</columns>
        <columns>Incap311__Allow_Citizen_Web_Intake__c</columns>
        <columns>Incap311__Duplicate_Detection_Method__c</columns>
        <columns>Incap311__Is_Current_Version__c</columns>
        <columns>Incap311__Service_Location_Required__c</columns>
        <columns>Incap311__Default_Method__c</columns>
        <columns>Incap311__Default_Status__c</columns>
        <columns>Incap311__SLA_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRTV-{00000000}</displayFormat>
        <label>Service Type Version Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Incap311__Ensure_SLA_Is_Positive_Value</fullName>
        <active>true</active>
        <description>Ensure the value entered for SLA is positive and less than 10 million</description>
        <errorConditionFormula>AND(
        NOT(ISBLANK(Incap311__SLA__c)),
        OR(
           Incap311__SLA__c &lt;= 0,
           Incap311__SLA__c &gt; 10000000
        )
)</errorConditionFormula>
        <errorMessage>The value for SLA must be a positive number greater than 0 and not greater than 10 million (10000000)</errorMessage>
    </validationRules>
</CustomObject>